# rmts_bot

./: .env  .gitignore  README.md  bot.py  console.py  pyproject.toml
rmts/plugins/autosign/: __init__.py
rmts/plugins/bilibili/: __init__.py  config.py  live_api.py  status.py
rmts/plugins/chat/: __init__.py  clear_history.py  deepseek.py  function_calling.py  history.py  memory.py  model.py  pool.py  prompt.py
rmts/plugins/chat/functions/action/: __init__.py  send_sticker.py
rmts/plugins/chat/functions/info/: __init__.py  birthday.py  image_vision.py  operators.py  weather.py
rmts/plugins/chat/functions/memory/: __init__.py  memory_manager.py
rmts/plugins/emoji_like/: __init__.py
rmts/plugins/greet/: __init__.py
rmts/plugins/keyword/: __init__.py
rmts/plugins/main/: __init__.py
rmts/plugins/minecraft/: __init__.py  status.py
rmts/plugins/roulette/: __init__.py  game.py
rmts/plugins/weishu/: __init__.py  weishu.py
rmts/resources/json/birthday/: birthday.json
rmts/resources/json/operators/: operators_info.json
rmts/tests/: conftest.py
rmts/utils/: __init__.py  action.py  config.py  info.py  nonebot.py  rate_limiter.py  rule.py
tests/utils/: test_rate_limiter.py
